mlton (20100608-3) unstable; urgency=low

  * Include all bugfixes since 20100608 release
  * Depend on libgmp-dev (closes: #618268)
  * Split package into compiler, runtime, basis, tools, and doc
   * Use multiarch to support cross-compiling
   * Eliminates the need for a mlton-cross package

 -- Wesley W. Terpstra (Debian) <terpstra@debian.org>  Sun, 20 Mar 2011 14:05:32 +0100

mlton (20100608-2) unstable; urgency=low

  * Added a new '-mno-explicit-relocs' mips work-around.
   * Bug filed with gcc upstream (#44537)

 -- Wesley W. Terpstra (Debian) <terpstra@debian.org>  Mon, 14 Jun 2010 18:28:58 +0200

mlton (20100608-1) unstable; urgency=low

  * New upstream release
  * Removed the mips -fPIC work-around
   * Filing a new gcc bug report upstream

 -- Wesley W. Terpstra (Debian) <terpstra@debian.org>  Fri, 11 Jun 2010 16:11:59 +0200

mlton (20100504~svn-r7459) unstable; urgency=low

  * New snapshot from svn/HEAD
   * Includes fixes for PIC codegen on x86
   * Better handling of memory exhaustion
   * Fix aliasing problem with newest gcc
  * Switch to using quilt source format

 -- Wesley W. Terpstra (Debian) <terpstra@debian.org>  Tue, 04 May 2010 19:26:59 +0200

mlton (20100206~svn-r7414) unstable; urgency=low

  * s390 and hurd need fixed-heap to stop thrashing on resize
  * qemu'd armel needs max-heap to work-around mmap emulation problems
   => heap-size must choose {fixed/max}-heap

 -- Wesley W. Terpstra (Debian) <terpstra@debian.org>  Mon, 08 Feb 2010 20:22:20 +0100

mlton (20100206~svn-r7412) unstable; urgency=low

  * Restored -fPIC work-around and reopened #552314.
  * Got a qemu-linux-user with 1G of RAM to work => added armel target.

 -- Wesley W. Terpstra (Debian) <terpstra@debian.org>  Sat, 06 Feb 2010 11:16:31 +0100

mlton (20100205~svn-r7410) unstable; urgency=low

  * New snapshot from svn/HEAD
   * Split targets into sub-folder
   * makes cross-compiler packages possible
  * Add a debian/watch file for lintian