@@ -1,6 +1,5 @@
 usr/share/doc/mlton/examples
 usr/share/doc/mlton/guide
-usr/share/doc/mlton/mlton
 usr/share/doc/mlton/cmcat
 usr/share/doc/mlton/cm2mlb
 usr/share/doc/mlton/ckit-lib
